# lumos

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docs/plans/: 2026-02-11-migration-plan.md
tests/: test_core_llm.py  test_core_tool.py  test_react_loop.py
