[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumos"
version = "0.1.0"
description = "Lumos - 你的终端 AI 编程助手，在代码的黑暗中为你照亮方向"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SnapeK"}
]
keywords = ["ai", "agent", "coding", "assistant", "llm", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # CLI 和 UI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",

    # 异步支持
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",

    # 配置管理
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # LLM 提供商
    "anthropic>=0.18.0",
    "openai>=1.12.0",

    # Web 工具
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "flake8>=6.1.0",
    "types-PyYAML>=6.0.12",
    "types-aiofiles>=23.2.0",
]

[project.urls]
Homepage = "https://github.com/SallyKAN/lumos"
Repository = "https://github.com/SallyKAN/lumos"

[project.scripts]
lumos = "packages.cli.main:main"

[tool.setuptools.packages.find]
include = ["packages*"]

[tool.setuptools.package-data]
"packages.server" = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
